--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,11 @@ pip/
 venv/
 .envs/
 .env
-.git/
 db.sqlite3
 /**/.idea/*
 .idea/
 **/.idea/
+docs/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
