--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -60,10 +60,10 @@ services:
     ports: []
     command: /start-celerybeat
 
-#  flower:
-#    <<: *django
-#    image: project_local_flower
-#    container_name: project_local_flower
-#    ports:
-#      - '5555:5555'
-#    command: /start-flower
+  flower:
+    <<: *django
+    image: project_local_flower
+    container_name: project_local_flower
+    ports:
+      - '5555:5555'
+    command: /start-flower
